2006-11-29  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm src/term.c (enhanced_recursion): Re-think what is 
	needed to pass an escaped Unicode character to svg. In normal text
	mode treat the sequence &#x... as a special case and pass it through
	as is.  In enhanced text mode & is already a special character, so in
	this case we need to temporarily replace it with an octal value that
	cannot be mistaken for something else, #xFE.

2006-11-28  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/faq-ja.tex: Sync Japanese documentation,
	SF Patch [1519215].

2006-11-28  Ethan Merritt  <merritt@u.washington.edu>

	* demo/layout.dem: Add a 4th demo plot illustrating the creation of
	stacked plots.

	* src/graphics.c (do_key_sample): If a box plot sample has zero width,
	do not draw a sample at all. This avoids drawing a visible border around
	a zero-width box.

2006-11-28  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Fix bug in --{en|dis}able-wxwidgets

	* src/wxterminal/wxt_gui.cpp:
	* src/wxterminal/wxt_gui.h:
	Allow building with wxMac, in addition to wxMSW and wxGTK.

2006-11-26  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* docs/gnuplot.doc: For filledcurves, the default variant depends
	on the number of columns in the input data.

2006-11-26  James R. Van Zandt  <jrvz@comcast.net>

	* term/README: tweak wording of _image documentation.

2006-11-25  Mike Sutton  <mws116@usa.com>

	* term/gd.trm (PNG_init PNG_vector PNG_point): Fix off-by-one error
	in specifying brush definitions that control line width.

2006-11-22  Ethan Merritt  <merritt@u.washington.edu>

	* term/pdf.trm (PDF_graphics):  The multiplier from 'set size' was being
	applied twice, so the resulting plot scaled as the square of the size.
	Apply it only once, to the plot, not to the canvas.

	* term/pbm.trm (PBM_graphics PBM_options): Decouple 'set size' from
	'set term pbm size XX,YY'. The latter will always yield an XX,YY image.